--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ crate-type = ["cdylib"]
 classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git"}
 classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
 error-chain = "0.12.2"
+notify = "4.0.15"
 rand = "0.7.3"
 rand_chacha = "0.2.2"
